tests/paczka1/fuzzy1/93773510.err
Error in line 4: KD8avauJ A566 15,7
Error in line 23: W9l0 A566 49,9
Error in line 32: akr5CK A5FF 192,7
Error in line 31: W9l0 S981 12,1
Error in line 36: W9l0 A566 24,7
